Fixed plot func; new fig labels; added .here file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(plot_sub_by)
 export(theme_m)
 importFrom(broom,tidy)
 importFrom(ggplot2,aes)
-importFrom(ggplot2,aes_)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
