diff figures for each country AND age, edu, gnd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(amce)
 export(descr2_labels)
 export(ggsave2)
 export(plot_diff_by)
+export(plot_diff_cntry_by)
 export(plot_sub_by)
 export(theme_m)
 importFrom(broom,tidy)
